<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buteq"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_equal"
        android:text="@string/equal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/but0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but1" />

    <Button
        android:id="@+id/but0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/zero"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/butpt"
        app:layout_constraintStart_toEndOf="@+id/buteq"
        app:layout_constraintTop_toBottomOf="@+id/but2" />

    <Button
        android:id="@+id/butpt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/point"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/butadd"
        app:layout_constraintStart_toEndOf="@+id/but0"
        app:layout_constraintTop_toBottomOf="@+id/but3" />

    <Button
        android:id="@+id/butadd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/add"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/butpt"
        app:layout_constraintTop_toBottomOf="@+id/butsub" />

    <Button
        android:id="@+id/butsub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/sub"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/butadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/but3"
        app:layout_constraintTop_toBottomOf="@+id/butmul" />

    <Button
        android:id="@+id/butmul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/mul"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/butsub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/but6"
        app:layout_constraintTop_toBottomOf="@+id/butdiv" />

    <Button
        android:id="@+id/butdiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/div"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/butmul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/but9"
        app:layout_constraintTop_toBottomOf="@+id/butac" />

    <Button
        android:id="@+id/but1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/one"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buteq"
        app:layout_constraintEnd_toStartOf="@+id/but2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but4" />

    <Button
        android:id="@+id/but2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/two"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/but0"
        app:layout_constraintEnd_toStartOf="@+id/but3"
        app:layout_constraintStart_toEndOf="@+id/but1"
        app:layout_constraintTop_toBottomOf="@+id/but5" />

    <Button
        android:id="@+id/but3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/three"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/butpt"
        app:layout_constraintEnd_toStartOf="@+id/butsub"
        app:layout_constraintStart_toEndOf="@+id/but2"
        app:layout_constraintTop_toBottomOf="@+id/but6" />

    <Button
        android:id="@+id/but4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/four"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/but1"
        app:layout_constraintEnd_toStartOf="@+id/but5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but7" />

    <Button
        android:id="@+id/but5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/five"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/but2"
        app:layout_constraintEnd_toStartOf="@+id/but6"
        app:layout_constraintStart_toEndOf="@+id/but4"
        app:layout_constraintTop_toBottomOf="@+id/but8" />

    <Button
        android:id="@+id/but6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/six"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/but3"
        app:layout_constraintEnd_toStartOf="@+id/butmul"
        app:layout_constraintStart_toEndOf="@+id/but5"
        app:layout_constraintTop_toBottomOf="@+id/but9" />

    <Button
        android:id="@+id/but7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/seven"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/but4"
        app:layout_constraintEnd_toStartOf="@+id/but8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butac" />

    <Button
        android:id="@+id/but8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/eight"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/but5"
        app:layout_constraintEnd_toStartOf="@+id/but9"
        app:layout_constraintStart_toEndOf="@+id/but7"
        app:layout_constraintTop_toBottomOf="@+id/butac" />

    <Button
        android:id="@+id/but9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/nine"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/but6"
        app:layout_constraintEnd_toStartOf="@+id/butdiv"
        app:layout_constraintStart_toEndOf="@+id/but8"
        app:layout_constraintTop_toBottomOf="@+id/butac" />

    <Button
        android:id="@+id/butac"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_ac"
        android:text="@string/AC"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/but8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCal" />

    <TextView
        android:id="@+id/viewCal"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:maxLength="42"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="56sp"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>